fix text z-index

--- a/laser/src/styles/sections/about-steffany/_four-boxes-about-steffany.sass
+++ b/laser/src/styles/sections/about-steffany/_four-boxes-about-steffany.sass
@@ -3,6 +3,8 @@ section.section.four-boxes-about-steffany
   padding-bottom: 75px
   background-image: url("../assets/img/about/four-box-bg.jpg")
   background-size: cover
+  position: relative
+  z-index: 1
   @include media-breakpoint-down(lg)
     padding-top: 48px
     padding-bottom: 89px
@@ -16,7 +18,7 @@ section.section.four-boxes-about-steffany
       .c-desc
         margin-left: auto
         position: relative
-        z-index: 0
+        //z-index: 0
         width: 450px
         @include media-breakpoint-down(lg)
           width: 439px
@@ -38,5 +40,6 @@ section.section.four-boxes-about-steffany
           max-width: 411px
         .paragraph-text
           //max-width: 393px
+          z-index: 1
           @include media-breakpoint-down(sm)
             max-width: 270px
